Add quotation decor
Adjust position and z-index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <main>
             <div class="wrapper">
                 <section class="comment" id="daniel">
+                    <div class="bg-decor">
+                        <img src="images/bg-pattern-quotation.svg" alt="quotation-decor">
+                    </div>
                     <div class="avatar-name">
                         <img src="images/image-daniel.jpg" alt="avatar-daniel">
                         <div class="name">
